<resources>
    <string name="app_name">TechNews</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="thumbnail_content_description_details">This is a thumbnail image of the related article which was opened in details view</string>
    <string name="thumbnail_content_description">This is a thumbnail image of the related article which was shown in recycler view</string>
    <string name="widget_image_view">this is the image of the widget\'s list item shown</string>

    <!--TODO put your api key here-->
    <string name="API_KEY">c19ecc2526e943afa2b2ee7011ada5f0</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="log_out">Log Out</string>
    <string name="top_headlines">Top Headlines</string>
    <string name="techcrunch">TechCrunch</string>
    <string name="ars_technica">Ars-Technica</string>
    <string name="bbc_news">Bbc-News</string>
    <string name="wired">Wired</string>
    <string name="cnn">Cnn</string>
    <string name="engadget">Engadget</string>
    <string name="mashable">Mashable</string>
    <string name="the_next_web">The-Next-Web</string>
    <string name="the_verge">The-Verge</string>
    <string name="bloomberg">Bloomberg</string>
    <string name="hacker_news">Hacker-News</string>
    <string name="reddit">Reddit</string>
    <string name="crypto_coin_news">Crypto-Coin-News</string>
    <string name="recode">Recode</string>
    <string name="techrader">Techrader</string>
    <string name="new_scientist">New-Scientist</string>
    <string name="vice_news">Vice-News</string>
    <string name="error_text">Some error occurred</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="publisher">Publisher</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_registered_log_in">Already Registered??..Log In</string>
    <string name="register">register</string>
    <string name="forget_password">Forget Password</string>
    <string name="we_will_send_u_an_email_for_reseting_the_password">We will send u an email for reseting the password</string>
    <string name="back">Back</string>
    <string name="reset_password">Reset Password</string>
    <string name="published_at">Published At</string>
    <string name="description">Description</string>
    <string name="read_the_article">Read The Article</string>
    <string name="not_registered_click_here">Not Registered....Click Here</string>
    <string name="log_in">Log In</string>
    <string name="enter_email_toast">Enter email address!</string>
    <string name="enter_password">Enter password!</string>
    <string name="password_short_message">Password too short, enter minimum 6 characters!</string>
    <string name="create_user">createUserWithEmail:onComplete:</string>
    <string name="authentication_failed">Authentication failed.</string>
    <string name="unsuccessful_login">Unsucessful login</string>
    <string name="authentication">Authentication failed.</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="reset_instructions">We have sent you instructions to reset your password!</string>
    <string name="failed_send_mail">Failed to send reset email!</string>
    <string name="cant_find_nav">Can\'t find the nav item</string>

</resources>
