<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="3dp"
    app:cardElevation="3dp">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/layout_image_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView_title_everything_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_weight="7"
                android:fontFamily="serif-monospace"
                android:gravity="start"
                android:text="@string/title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/imageView_everything_item"
                android:layout_width="80dp"
                android:layout_height="105dp"
                android:layout_margin="5dp"
                android:contentDescription="@string/thumbnail_content_description"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/placeholder" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_publisher_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_image_text">

            <TextView
                android:id="@+id/textView_author_everything_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_weight="5"
                android:fontFamily="serif-monospace"
                android:gravity="start"
                android:text="@string/author"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="128dp" />

            <TextView
                android:id="@+id/textView_publisher_everything_item"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_marginStart="16dp"
                android:layout_weight="5"
                android:fontFamily="serif-monospace"
                android:gravity="end"
                android:text="@string/publisher"
                android:textSize="@dimen/textsize_normal"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="200dp"
                tools:layout_editor_absoluteY="128dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_date_everything_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:fontFamily="serif-monospace"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_publisher_author"
            tools:text="Date" />


        <Button
            android:id="@+id/button_bookmark_frag_everything_item"
            android:layout_width="20dp"
            android:layout_height="30dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_bookmark_blank"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layout_publisher_author" />

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>